# microstrain_3dm_gx3_35

./: CMakeLists.txt  package.xml
include/microstrain_3dm_gx3_35/: node.h
launch/: imu.launch
scripts/: imu_3dm_gx3.rules
src/: driver.cpp  node.cpp
