<?xml version="1.0"?>
<package>
  <name>microstrain_3dm_gx3_35</name>
  <version>0.0.0</version>
  <description>microstrain_3dm_gx3_35</description>

  <maintainer email="code@clearpathrobotics.com" />
  <author email="imaterna@fit.vutbr.cz">Zdenek Materna</author>
  
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
